# AppliedFoundationModels

./: .gitignore  .gitmodules  config.yaml  pyproject.toml
notebooks/: Pipeline.ipynb  Pipeline3D_ScanNet.ipynb  Pipeline3D_TUM.ipynb  PipelineV2.ipynb  SigLib.ipynb  ViSTA-SLAM.ipynb  ViSTA-SLAM_wrapped.ipynb
scripts/local/: run_tests.sh  setup_vista_slam.sh
src/data_model/: __init__.py  search_state.py
src/index/: __init__.py  indexer.py  preprocess.py  status.py
src/models/: __init__.py  base.py  grounding_dino.py  sam.py  sam_vit.py  siglib.py
src/models/reconstructors/: __init__.py  base.py  vista_slam.py
src/query/: __init__.py  detect.py  embed.py  pipeline.py  project.py  rerank.py  retrieve.py
src/utils/: datasets.py  db.py  geometry.py
tests/index/: conftest.py  test_indexer.py  test_object_extractor.py  test_status.py
tests/models/: conftest.py  test_base.py  test_grounding_dino.py  test_sam.py  test_sam_vit.py  test_siglib.py
tests/query/: conftest.py  test_detect.py  test_embed.py  test_pipeline.py  test_project.py  test_rerank.py  test_retrieve.py
tests/utils/: test_datasets.py  test_geometry.py
