[project]
name = "appliedfoundationmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "huggingface-hub>=1.16.1",
    "jupyterlab>=4.5.7",
    "k3d>=2.17.0",
    "lancedb>=0.30.2",
    "langchain>=1.3.1",
    "matplotlib>=3.10.9",
    "plotly>=6.7.0",
    "pyyaml>=6.0",
    "torchvision>=0.27.0",
    "tqdm>=4.66",
    "transformers>=5.9.0",
    "vggt",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-gremlins>=1.8.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: requires real model downloads and a GPU — skipped by default"]
addopts = "-m 'not slow'"

[tool.uv.sources]
vggt = { git = "https://github.com/facebookresearch/vggt.git" }
